app/src/main/java/com/example/realtimechatapp/core/error/Error.kt
package com.example.realtimechatapp.core.error

sealed interface Error